--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: frame_realtime_gemini_voicevision
 description: "Connects to Frame, streams audio from the Frame microphone and photos from its camera in a websockets conversation with the Gemini Realtime API"
 publish_to: 'none'
-version: 0.1.0
+version: 0.1.1
 
 environment:
   sdk: '>=3.4.3 <4.0.0'
@@ -9,35 +9,42 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
+  # Frame / Bluetooth stack
   flutter_blue_plus: ^1.32.12
-  logging: ^1.2.0
+  flutter_bluetooth_serial: ^1.0.0
+
+  # Frame SDK & utilities
   simple_frame_app: ^7.0.0
   frame_msg: ^2.0.0
-  shared_preferences: ^2.3.2
+  logging: ^1.2.0
+  shared_preferences: ^2.2.2
   share_plus: ^10.1.0
-  flutter_foreground_task: ^6.5.0
-  flutter_pcm_sound: ^3.1.1
-  web_socket_channel: ^3.0.1
 
-  # ObjectBox dependencies
+  # Real-time pipeline
+  flutter_pcm_sound: ^3.1.1
+  web_socket_channel: ^2.4.0
+
+  # Foreground service (8.x API)
+  flutter_foreground_task: ^8.0.0
+
+  # Runtime permissions
+  permission_handler: ^11.3.1
+
+  # ObjectBox
   objectbox: ^4.0.0
   objectbox_flutter_libs: any
 
-  # Path packages
+  # Misc
   path_provider: ^2.1.3
   path: ^1.9.0
-
-  # NEW: Added for Phase 1
   google_mlkit_text_recognition: ^0.11.0
   image: ^4.2.0
-
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
-
-  # ObjectBox generator dependencies
   build_runner: ^2.4.0
   objectbox_generator: ^4.0.0
 
