--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,9 +1,26 @@
+// Top-level build file
+
+buildscript {
+    ext.kotlin_version = '1.9.10'
+
+    repositories {
+        google()
+        mavenCentral()
+    }
+
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.6.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
 allprojects {
     repositories {
         google()
         mavenCentral()
     }
 
+    // Preserve auto-namespace feature already present
     subprojects {
         afterEvaluate { project ->
             if (project.hasProperty('android')) {
@@ -18,13 +35,7 @@ allprojects {
 }
 
 rootProject.buildDir = "../build"
-subprojects {
-    project.buildDir = "${rootProject.buildDir}/${project.name}"
-}
-subprojects {
-    project.evaluationDependsOn(":app")
-}
+subprojects { project.buildDir = "${rootProject.buildDir}/${project.name}" }
+subprojects { project.evaluationDependsOn(":app") }
 
-tasks.register("clean", Delete) {
-    delete rootProject.buildDir
-}
+tasks.register("clean", Delete) { delete rootProject.buildDir }
