--- a/.github/workflows/build-demo-apk.yml
+++ b/.github/workflows/build-demo-apk.yml
@@ -3,11 +3,10 @@ name: Build Cognitive Assistant APK
 on:
   push:
     branches:
-      - refactor-v2  # This now watches our new branch
+      - refactor-v2        # watches your new branch
       - main
   pull_request:
-    branches:
-      - main
+    branches: [ main ]
   workflow_dispatch:
 
 jobs:
@@ -16,35 +15,48 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # ─────────── Checkout ──────────────────────────────────────────────
       - name: Checkout repository code
         uses: actions/checkout@v4
 
+      # ─────────── JDK 17 (Gradle 8+) ────────────────────────────────────
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          distribution: temurin
+          java-version: 17
 
-      - name: Set up Flutter
+      # ─────────── Flutter SDK 3.32.5 (Dart 3.8.1) ───────────────────────
+      - name: Set up Flutter 3.32.5
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.24.0'
-          channel: 'stable'
-          cache: true
+          flutter-version: "3.32.5"   # tag you tested locally
+          channel: stable             # ignored when tag is explicit
+          cache: true                 # caches ~/.pub-cache & SDK
 
+      - name: Confirm toolchain
+        run: flutter --version
+
+      # ─────────── Dependencies & code-gen ───────────────────────────────
       - name: Install Flutter dependencies
         run: flutter pub get
 
-      - name: Run Build Runner
+      - name: Run build_runner
         run: dart run build_runner build --delete-conflicting-outputs
 
+      # ─────────── Lint gate (optional) ──────────────────────────────────
+      - name: Static analysis
+        run: flutter analyze --no-pub
+
+      # ─────────── Build APK ─────────────────────────────────────────────
       - name: Clean Flutter build cache
         run: flutter clean
 
       - name: Build Debug APK
         run: flutter build apk --debug
 
-      - name: Upload Demo APK Artifact
+      # ─────────── Upload artifact ───────────────────────────────────────
+      - name: Upload Demo APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: cognitive-assistant-debug.apk
