--- a/.github/workflows/build-demo-apk.yml
+++ b/.github/workflows/build-demo-apk.yml
@@ -53,7 +53,7 @@ jobs:
         run: flutter clean
 
       - name: Build Debug APK
-        run: flutter build apk --debug
+        run: flutter build apk --debug -v
 
       # ─────────── Upload artifact ───────────────────────────────────────
       - name: Upload Demo APK artifact
