--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # Bluetooth stack (BLE only; classic Serial plugin removed)
-  flutter_blue_plus: ^1.32.12           # BLE
+  # Bluetooth stack (BLE only)
+  flutter_blue_plus: ^1.32.12
 
   # Frame SDK
   simple_frame_app: ^7.0.0
@@ -22,15 +22,19 @@ dependencies:
   # Core utilities
   logging: ^1.2.0
   shared_preferences: ^2.2.2
-  share_plus: ^10.1.0
+  share_plus: ^11.0.0               # v2-ready
   permission_handler: ^11.3.1
 
   # Real-time pipeline
-  flutter_pcm_sound: ^3.1.1
+  flutter_pcm_sound: ^3.1.7         # latest stable, v2-ready
   web_socket_channel: ^2.4.0
 
-  # Foreground service (9.x API)
+  # Foreground service (v2 embedding)
   flutter_foreground_task: ^9.1.0
+
+  # ML Kit (v2 embedding)
+  google_mlkit_text_recognition: ^0.15.0
+  google_mlkit_commons: ^0.11.0
 
   # ObjectBox
   objectbox: ^4.0.0
@@ -39,7 +43,6 @@ dependencies:
   # Misc
   path_provider: ^2.1.3
   path: ^1.9.0
-  google_mlkit_text_recognition: ^0.11.0
   image: ^4.2.0
 
 dev_dependencies:
