--- a/.github/workflows/build-demo-apk.yml
+++ b/.github/workflows/build-demo-apk.yml
@@ -3,7 +3,7 @@ name: Build Cognitive Assistant APK
 on:
   push:
     branches:
-      - refactor-v2        # watches your new branch
+      - refactor-v2        # watches your working branch
       - main
   pull_request:
     branches: [ main ]
@@ -16,10 +16,10 @@ jobs:
 
     steps:
       # ─────────── Checkout ──────────────────────────────────────────────
-      - name: Checkout repository code
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      # ─────────── JDK 17 (Gradle 8+) ────────────────────────────────────
+      # ─────────── JDK 17 (for Gradle 8+) ────────────────────────────────
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -30,33 +30,46 @@ jobs:
       - name: Set up Flutter 3.32.5
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.32.5"   # tag you tested locally
-          channel: stable             # ignored when tag is explicit
-          cache: true                 # caches ~/.pub-cache & SDK
+          flutter-version: 3.32.5       # exact tag
+          channel: stable               # ignored because tag given
+          cache: true                   # cache SDK + pub-cache
 
-      - name: Confirm toolchain
+      - name: Show tool versions
         run: flutter --version
 
       # ─────────── Dependencies & code-gen ───────────────────────────────
-      - name: Install Flutter dependencies
+      - name: flutter pub get
         run: flutter pub get
 
       - name: Run build_runner
         run: dart run build_runner build --delete-conflicting-outputs
 
-      # ─────────── Lint gate (optional) ──────────────────────────────────
+      # ─────────── Lint gate (fails build on new errors) ─────────────────
       - name: Static analysis
         run: flutter analyze --no-pub
 
-      # ─────────── Build APK ─────────────────────────────────────────────
-      - name: Clean Flutter build cache
+      # ─────────── Build APK with verbose log capture ────────────────────
+      - name: flutter clean
         run: flutter clean
 
-      - name: Build Debug APK
-        run: flutter build apk --debug -v
+      - name: Build Debug APK (capture log)
+        id: build_apk
+        run: |
+          # Capture full verbose output for troubleshooting
+          set -o pipefail
+          flutter build apk --debug -v 2>&1 | tee flutter-build.log
 
-      # ─────────── Upload artifact ───────────────────────────────────────
-      - name: Upload Demo APK artifact
+      # ─────────── Upload build log always (success or fail) ─────────────
+      - name: Upload flutter-build.log
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: flutter-build-log
+          path: flutter-build.log
+
+      # ─────────── Upload APK only on success ────────────────────────────
+      - name: Upload Debug APK artifact
+        if: success()
         uses: actions/upload-artifact@v4
         with:
           name: cognitive-assistant-debug.apk
