--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,5 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 /android/app/src/main/java/io/flutter/plugins/
+/android/app/src/main/java/io/flutter/plugins/
+/android/app/src/main/java/io/flutter/plugins/
