--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   # Core utilities
   logging: ^1.2.0
   shared_preferences: ^2.2.2
-  permission_handler: ^12.0.0+1        # v2-ready
+  permission_handler: ^12.0.0        # v2-ready
   share_plus: ^11.0.0                  # v2-ready
 
   # Real-time pipeline
