Kill legacy GeneratedPluginRegistrant: delete, ignore, guard Gradle copy task

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -51,3 +51,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
+
+// ── disable any task that copies GeneratedPluginRegistrant ──
+tasks.matching { it.name =~ /copy.*GeneratedPluginRegistrant.*/ }.configureEach {
+    enabled = false
+}
