Fix: Resolve Flutter v1 embedding error - Updated to v2 embedding
- Fixed AndroidManifest.xml with proper v2 embedding configuration
- Updated Android Gradle Plugin to 8.3.0 for compatibility
- Added flutterEmbedding metadata and proper activity configuration
- Configured native library packaging for ObjectBox and other plugins
- Ready for CI/CD build with proper NDK handling

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,13 @@
-org.gradle.jvmargs=-Xmx4G -XX:+HeapDumpOnOutOfMemoryError
+org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+
+# Flutter build optimization
+flutter.buildMode=debug
+flutter.versionCode=1
+flutter.versionName=1.0.0
+
+# Gradle performance optimization
+org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.configureondemand=true
