--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,6 +36,14 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+
+    // Handle native libraries properly for CI/CD
+    packagingOptions {
+        pickFirst '**/libc++_shared.so'
+        pickFirst '**/libjsc.so'
+        pickFirst '**/libobjectbox.so'
+        pickFirst '**/libobjectbox-jni.so'
+    }
 }
 
 flutter { source "../.." }
@@ -50,9 +58,4 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-}
-
-// ── disable any task that copies GeneratedPluginRegistrant ──
-tasks.matching { it.name =~ /copy.*GeneratedPluginRegistrant.*/ }.configureEach {
-    enabled = false
 }
