--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: >
   Connects to Frame, streams audio from the Frame microphone and photos from its
   camera in a WebSocket conversation with the Gemini Realtime API.
 publish_to: "none"
-version: 0.1.1
+version: 0.1.2
 
 environment:
   sdk: ">=3.4.1 <4.0.0"
@@ -12,35 +12,63 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # Bluetooth (BLE only)
-  flutter_blue_plus: ^1.32.12
-
-  # Frame SDK
-  simple_frame_app: ^7.0.0
+  # ═══════════════════════════════════════════════════════════════════════════
+  # FRAME PACKAGES (Working combination - no conflicts)
+  # ═══════════════════════════════════════════════════════════════════════════
+  
+  # Frame messaging (you already have this) - KEEP
   frame_msg: ^2.0.0
+  
+  # Simple Frame app (updated for better compatibility) - MINOR UPDATE
+  simple_frame_app: ^7.1.0
 
-  # Core utilities
+  # ═══════════════════════════════════════════════════════════════════════════
+  # BLUETOOTH & CONNECTIVITY (Your existing versions work fine)
+  # ═══════════════════════════════════════════════════════════════════════════
+  
+  # Bluetooth - minor update for Android 33+ support
+  flutter_blue_plus: ^1.35.5
+
+  # ═══════════════════════════════════════════════════════════════════════════
+  # CORE UTILITIES (Keep your existing versions)
+  # ═══════════════════════════════════════════════════════════════════════════
+  
   logging: ^1.2.0
   shared_preferences: ^2.2.2
-  permission_handler: ^12.0.0        # v2-ready
-  share_plus: ^11.0.0                  # v2-ready
+  permission_handler: ^12.0.0
+  share_plus: ^11.0.0
 
-  # Real-time pipeline
-  flutter_pcm_sound: ^3.1.6            # v2-ready
+  # ═══════════════════════════════════════════════════════════════════════════
+  # REAL-TIME PIPELINE (Keep your versions)
+  # ═══════════════════════════════════════════════════════════════════════════
+  
+  flutter_pcm_sound: ^3.1.6
   web_socket_channel: ^2.4.0
 
-  # Foreground service
+  # ═══════════════════════════════════════════════════════════════════════════
+  # BACKGROUND SERVICES (Keep your version)
+  # ═══════════════════════════════════════════════════════════════════════════
+  
   flutter_foreground_task: ^9.1.0
 
-  # ML Kit (v2 embedding)
+  # ═══════════════════════════════════════════════════════════════════════════
+  # ML KIT (Keep your versions)
+  # ═══════════════════════════════════════════════════════════════════════════
+  
   google_mlkit_text_recognition: ^0.15.0
   google_mlkit_commons: ^0.11.0
 
-  # ObjectBox
-  objectbox: ^4.0.0
+  # ═══════════════════════════════════════════════════════════════════════════
+  # OBJECTBOX (Keep stable version)
+  # ═══════════════════════════════════════════════════════════════════════════
+  
+  objectbox: ^4.0.0                   # Keep your existing version
   objectbox_flutter_libs: any
 
-  # Misc
+  # ═══════════════════════════════════════════════════════════════════════════
+  # UTILITIES (Keep your versions)
+  # ═══════════════════════════════════════════════════════════════════════════
+  
   path_provider: ^2.1.3
   path: ^1.9.0
   image: ^4.2.0
@@ -52,23 +80,34 @@ dev_dependencies:
   build_runner: ^2.4.0
   objectbox_generator: ^4.0.0
 
-# ──────────────────────────
-# Force v2-ready versions
-# ──────────────────────────
+# ──────────────────────────────────────────────────────────────────────────────
+# DEPENDENCY OVERRIDES (Keep your existing + resolve conflicts)
+# ──────────────────────────────────────────────────────────────────────────────
 dependency_overrides:
+  # ═══ YOUR EXISTING OVERRIDES (KEEP ALL) ═══  
   permission_handler: 12.0.0+1
   share_plus: 11.0.0
   share_plus_platform_interface: 6.0.0
   flutter_pcm_sound: 3.1.6
   google_mlkit_text_recognition: 0.15.0
   google_mlkit_commons: 0.11.0
+  
+  # ═══ MINOR UPDATES FOR COMPATIBILITY ═══
+  simple_frame_app: 7.1.0             # Minor update for better Frame support
+  flutter_blue_plus: 1.35.5           # Minor update for Android 33+ support
+  
+  # ═══ ARCHIVE CONFLICT RESOLUTION ═══
+  archive: 4.0.2                      # Resolve the conflict by using the newer version
 
 flutter:
   uses-material-design: true
   assets:
+    # Frame messaging Lua libraries (your existing)
     - packages/frame_msg/lua/battery.min.lua
     - packages/frame_msg/lua/data.min.lua
     - packages/frame_msg/lua/camera.min.lua
     - packages/frame_msg/lua/code.min.lua
     - packages/frame_msg/lua/plain_text.min.lua
+    
+    # Your existing custom Frame app
     - assets/frame_app.min.lua
