Fix: Complete Frame + Gemini integration with ObjectBox
- Added missing google_generative_ai dependency to pubspec.yaml
- Fixed ObjectBox entity structure in lib/model/document_entity.dart
- Resolved DateTime property type warnings
- Fixed vector database service import paths
- Updated dependencies and resolved conflicts
- ObjectBox generation now works without errors
- Ready for APK build via GitHub Actions

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,12 @@ dependencies:
   google_mlkit_commons: ^0.11.0
 
   # ═══════════════════════════════════════════════════════════════════════════
+  # GEMINI AI (MISSING - CRITICAL FIX)
+  # ═══════════════════════════════════════════════════════════════════════════
+  
+  google_generative_ai: ^0.4.3
+
+  # ═══════════════════════════════════════════════════════════════════════════
   # OBJECTBOX (Keep stable version)
   # ═══════════════════════════════════════════════════════════════════════════
   
@@ -98,6 +104,9 @@ dependency_overrides:
   
   # ═══ ARCHIVE CONFLICT RESOLUTION ═══
   archive: 4.0.2                      # Resolve the conflict by using the newer version
+  
+  # ═══ GEMINI AI FIX ═══
+  google_generative_ai: 0.4.3         # Add missing Gemini dependency
 
 flutter:
   uses-material-design: true
